--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -16,6 +16,12 @@ vars:
   VERSION: "5.0.0"
 
 tasks:
+  default:
+    cmds:
+      - echo "To list the available RetroTxt tasks:"
+      - echo "task --list"
+      - echo "task -l"
+    silent: true
   # internal commands
   rename-build:
     dir: web-ext-artifacts
@@ -65,14 +71,11 @@ tasks:
   init:
     desc: Initialises this repository for first time use after being cloned.
     cmds:
-      - task: init-chrome
       - cmd: yarn install
       - task: depends
   version-set:
     desc: Applies the VERSION in Taskfile.yml variable value to the manifest.json and package.json files.
     deps: [set-version, set-ver-yarn]
-    cmds:
-      - task: init-chrome
   version-purge:
     desc: Removes the current VERSION variable value as a tag from the GitHub repository.
     cmds:
