--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -76,7 +76,7 @@
   ],
   "short_name": "RetroTxt",
   "version": "5.0.0",
-  "version_name": "Manifest V3 beta",
+  "version_name": "5 rc-1",
   "web_accessible_resources": [
     {
       "resources": [
