--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "retrotxt",
-  "version": "5.0.0-rc.2",
+  "version": "5.0.0",
   "description": "",
   "keywords": [],
   "author": "Ben Garrett",
