--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
   "license": "LGPL-3.0",
   "dependencies": {
     "bulma": "^0.9.4",
-    "qunit": "^2.19.1"
+    "qunit": "^2.19.4"
   },
   "devDependencies": {
-    "ajv": "^8.11.0",
+    "ajv": "^8.12.0",
     "dot-json": "^1.2.2",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.7",
+    "shx": "^0.3.4",
     "wawoff2": "^2.0.1",
-    "web-ext": "^7.2.0"
+    "web-ext": "^7.6.1"
   },
   "scripts": {
     "font": "woff2_compress.js"
