new fonts, Amstrad CPC, Amstrad PCW, BBC Micro, Sinclair QL, TI-99/4a and MSX.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -16,8 +16,7 @@ vars:
 
 tasks:
   default:
-    silent: true
-    desc: this task, list all available tasks
+    desc: List the available tasks
     cmds:
      - task --list
   # internal commands
