--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -29,7 +29,7 @@
     }
   ],
   "commands": {
-    "_execute_browser_action": {
+    "_execute_action": {
       "suggested_key": {
         "default": "Alt+R"
       },
