toolbar button is a static help popup.

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -8,7 +8,8 @@
       "38": "assets/retrotxt_38.png",
       "48": "assets/retrotxt_48.png",
       "128": "assets/retrotxt_128.png"
-    }
+    },
+    "default_popup": "html/popup.html"
   },
   "author": "Ben Garrett",
   "background": {
@@ -33,7 +34,7 @@
       "suggested_key": {
         "default": "Alt+R"
       },
-      "description": "Switch the active tab between plain text and HTML displays"
+      "description": "Display the RetroTxt quick help"
     }
   },
   "default_locale": "en_US",
