--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "license": "LGPL-3.0",
   "dependencies": {
     "bulma": "^0.9.4",
+    "linkify-element": "^4.1.1",
+    "linkify-plugin-ip": "^4.1.1",
+    "linkifyjs": "^4.1.1",
     "qunit": "^2.19.4"
   },
   "devDependencies": {
