--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "LGPL-3.0",
   "dependencies": {
     "bulma": "^0.9.4",
+    "dompurify": "^3.0.6",
     "linkify-element": "^4.1.3",
     "linkify-plugin-ip": "^4.1.3",
     "linkifyjs": "^4.1.3",
