--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -76,8 +76,7 @@
     "storage"
   ],
   "short_name": "RetroTxt",
-  "version": "5.2.0",
-  "version_name": "5",
+  "version": "5.3.0",
   "web_accessible_resources": [
     {
       "resources": [
@@ -94,7 +93,8 @@
       "resources": [
         "js/linkify.js",
         "js/linkify-element.js",
-        "js/linkify-plugin-ip.js"
+        "js/linkify-plugin-ip.js",
+        "js/purify.js"
       ],
       "matches": [
         "*://*.retrotxt.com/*",
