--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -10,64 +10,26 @@ version: "3"
 silent: true
 
 vars:
-  REQDJS: "task requires the installation of dot-json: https://www.npmjs.com/package/dot-json"
   REQDOCS: "task requires the installation of mkdocs: https://www.mkdocs.org/user-guide/installation"
-  REQGIT: "task requires the installation of git: https://github.com/git-guides/install-git"
   REQPNPM: "task requires the installation of pnpm: https://pnpm.io/installation"
   REQSHX: "task requires the installation of shelljs/shx: https://github.com/shelljs/shx"
   REQWEXT: "task requires the installation of Web-ext: https://github.com/mozilla/web-ext"
   REQMAT: "task requires the installation of Material for MkDocs: https://squidfunk.github.io/mkdocs-material"
 
-  # The published version number of RetroTxt used in the manifest.json and GitHub commit
-  # Must use the numeric format 5.0.0
-  VERSION: "5.4.0"
 tasks:
   default:
     desc: List the available tasks.
     cmds:
      - task --list
 
-  # internal commands
-  rename-build:
-    preconditions:
-      - sh: pnpm -v
-        msg: "{{.REQPNPM}}"
-      - sh: pnpm exec shx --version
-        msg: "{{.REQSHX}}"
-    dir: web-ext-artifacts
-    cmds:
-      - pnpm exec shx mv -f "web-ext-artifacts/retrotxt-{{.VERSION}}.zip" "web-ext-artifacts/retrotxt_for_{{.BROWSER}}-{{.VERSION}}.zip"
-    status:
-      - test -f "retrotxt_for_{{.BROWSER}}-{{.VERSION}}.zip"
-
-  set-version:
-    preconditions:
-      - sh: pnpm -v
-        msg: "{{.REQPNPM}}"
-      - sh: pnpm exec dot-json -v
-        msg: "{{.REQDJS}}"
-    cmds:
-      - pnpm exec dot-json ext/manifest.json version "{{.VERSION}}"
-      - pnpm exec dot-json package.json version "{{.VERSION}}"
-
-  set-ver:
-    preconditions:
-      - sh: git -v
-        msg: "{{.REQGIT}}"
-    cmds:
-      - cmd: git tag "v{{.VERSION}}"
-        ignore_error: true
-      - cmd: git push --tags
-        ignore_error: true
-
   # user commands that are displayed with `task --list`
-  builds:
-    desc: Creates submission packages for Chrome.
+  build:
+    desc: Creates the submission package for Chrome.
     summary: |
-      Creates a package that is intended for submission to the Chrome Web Store.
+      Creates a package that is intended for submission to the Chrome Web Store
+      and Microsoft Edge Add-ons.
 
       Packaged file will be located in /web-ext-artifacts
-      Its filename will be retrotxt_for_chrome-{{.VERSION}}.zip
     cmds:
       - task: build-chrome
 
@@ -79,12 +41,9 @@ tasks:
       - sh: pnpm exec web-ext --version
         msg: "{{.REQWEXT}}"
     cmds:
-      - task: version-set
-      - task: depends
+      - task: dep-copy
       - cmd: pnpm exec web-ext --config ext/.web-ext-chrome.js --source-dir ./ext build
         ignore_error: true
-      - task: rename-build
-        vars: { BROWSER: "chrome" }
 
   checks:
     desc: Check, run and print the versions of the task commands and dependencies.
@@ -95,8 +54,6 @@ tasks:
       - cmd: node --version
       - cmd: pnpm exec shx echo -n "pnpm version "
       - cmd: pnpm --version
-      - cmd: pnpm exec shx echo -n "dot-json v"
-      - cmd: pnpm exec dot-json --version
       - cmd: pnpm exec shx --version
       - cmd: pnpm exec shx echo -n "Web-ext v"
       - cmd: pnpm exec web-ext --version
@@ -110,8 +67,8 @@ tasks:
       - cmd: git --version
       - cmd: task --version
 
-  depends:
-    desc: Copies the latest dependencies over to the package.
+  dep-copy:
+    desc: Copies the dependencies from `node_modules` over to the `ext` directory.
     preconditions:
       - sh: pnpm -v
         msg: "{{.REQPNPM}}"
@@ -127,49 +84,17 @@ tasks:
       - cmd: pnpm exec shx cp -f "node_modules/linkify-element/dist/linkify-element.js" "ext/js/linkify-element.js"
       - cmd: pnpm exec shx cp -f "node_modules/dompurify/dist/purify.js" "ext/js/purify.js"
 
-  init:
-    desc: Initialises this repository for first time use after being cloned.
+  dep-install:
+    desc: Installs both the dependencies and dev-dependencies contained in the package.json.
     preconditions:
       - sh: pnpm -v
         msg: "{{.REQPNPM}}"
     cmds:
       - cmd: pnpm install
-      - task: depends
+      - task: dep-copy
 
-  version-set:
-    desc: Applies the VERSION in Taskfile.yml variable value to the manifest.json and package.json files.
-    deps: [set-version] # , set-ver
-
-  version-purge:
-    desc: Removes the current VERSION variable value as a tag from the GitHub repository.
-    preconditions:
-      - sh: pnpm -v
-        msg: "{{.REQPNPM}}"
-      - sh: git -v
-        msg: "{{.REQGIT}}"
-    cmds:
-      - cmd: git tag "v{{.VERSION}}" --delete
-        ignore_error: true
-      - cmd: git push --tags
-
-  commit:
-    desc: Applies the VERSION variable to the JSON files and commits it to GitHub.
-    preconditions:
-      - sh: pnpm -v
-        msg: "{{.REQPNPM}}"
-      - sh: git -v
-        msg: "{{.REQGIT}}"
-    deps: [set-version, version-purge, builds]
-    cmds:
-      - task: version-purge
-      - task: set-version
-      - task: builds
-      - cmd: git tag -a "v{{.VERSION}}" --message "Version {{.VERSION}}"
-      - cmd: git push --tags
-      - cmd: git push
-
-  update:
-    desc: Update to the latest dependencies.
+  dep-update:
+    desc: Updates all dependencies to the latest version and copies them to the `ext` directory.
     preconditions:
       - sh: pnpm -v
         msg: "{{.REQPNPM}}"
@@ -178,7 +103,7 @@ tasks:
     cmds:
       - cmd: pnpm update
       - cmd: pnpm exec shx echo ""
-      - task: depends
+      - task: dep-copy
 
   docs-build:
     desc:  Build the current documentation in use on https://docs.retrotxt.com.
