--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
-  "name": "retrotxt",
-  "version": "5.4.0",
-  "description": "",
-  "keywords": [],
-  "author": "Ben Garrett",
-  "private": true,
-  "license": "LGPL-3.0",
   "dependencies": {
     "bulma": "^1.0.0",
     "dompurify": "^3.1.3",
+    "globals": "^15.2.0",
+    "js": "^0.1.0",
     "linkify-element": "^4.1.3",
     "linkify-plugin-ip": "^4.1.3",
     "linkifyjs": "^4.1.3",
@@ -16,10 +11,7 @@
   },
   "devDependencies": {
     "ajv": "^8.13.0",
-    "dot-json": "^1.3.0",
     "eslint": "^9.2.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
     "shx": "^0.3.4",
     "wawoff2": "^2.0.1",
