--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,6 +22,13 @@ tasks:
     cmds:
      - task --list
 
+  lint:
+    desc: Lint the JavaScript files in the `ext` directory.
+    ignore_error: true
+    cmds:
+      # node and dependencies
+      - cmd: pnpm exec eslint ext/scripts/**/*.js --stats
+
   # user commands that are displayed with `task --list`
   build:
     desc: Creates the submission package for Chrome.
