--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "qunit": "^2.24.1"
   },
   "devDependencies": {
+    "@eslint/css": "^0.7.0",
     "ajv": "^8.17.1",
-    "eslint": "^9.25.0",
+    "eslint": "^9.25.1",
     "prettier": "^3.5.3",
     "shx": "^0.4.0",
     "wawoff2": "^2.0.1",
