--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ajv": "^8.17.1",
     "eslint": "^9.39.2",
     "prettier": "^3.8.1",
+    "puppeteer": "^24.37.2",
     "shx": "^0.4.0",
     "wawoff2": "^2.0.1",
     "web-ext": "^9.2.0"
